fix(runtime): run prisma generate on install and prestart

--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -8,7 +8,9 @@
     "build": "tsc -p tsconfig.json",
     "start": "node dist/main.js",
     "prisma:generate": "prisma generate",
-    "prisma:dbpush": "prisma db push"
+    "prisma:dbpush": "prisma db push",
+    "prestart": "prisma generate",
+    "postinstall": "prisma generate"
   },
   "dependencies": {
     "@nestjs/common": "^10.0.0",
